[package]
name = "task_scope"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
futures-intrusive = "0.2.2"
pin-project = "0.4.6"
tokio = { version = "0.2.6", features = ["full"] }
parking_lot = "0.9.0"
bytes = "0.5.3"
