[package]
name = "task_scope"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

description = "asynchronous runtime extension for supporting Structured Concurrency with task spawning"
repository = "https://github.com/pandaman64/task_scope"
categories = ["asynchronous", "concurrency"]

license = "MIT OR Apache-2.0"

[dependencies]
futures = "0.3.1"
futures-intrusive = "0.2.2"
pin-project = "0.4.6"
tokio = { version = "0.2.6", features = ["full"] }
parking_lot = "0.9.0"
bytes = "0.5.3"
